[gd_scene load_steps=7 format=3 uid="uid://xm6i2gptcsm3"]

[ext_resource type="Script" path="res://addons/dofbody/example/Player/FPSPlayer.gd" id="1"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(0.5, 0.5, 0.1)

[sub_resource type="CapsuleShape3D" id="2"]
height = 1.8

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(2, 2, 2)

[sub_resource type="SphereMesh" id="4"]
radius = 0.1
height = 0.2

[sub_resource type="BoxMesh" id="5"]
size = Vector3(0.02, 0.3, 0.02)

[node name="FPSPlayer" type="CharacterBody3D" groups=["physics/player"]]
collision_layer = 2
script = ExtResource("1")

[node name="Feet" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.3, 0)
shape = SubResource("1")

[node name="Body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 1.4, 0)
shape = SubResource("2")

[node name="RotationHelper" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.03126, 0)

[node name="GrabZone" type="Area3D" parent="RotationHelper" groups=["physics/grabzone"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.09686)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="RotationHelper/GrabZone"]
shape = SubResource("3")

[node name="RightHandPos" type="Marker3D" parent="RotationHelper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, -2)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RotationHelper/RightHandPos"]
mesh = SubResource("4")

[node name="MeshInstance2" type="MeshInstance3D" parent="RotationHelper/RightHandPos"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
mesh = SubResource("5")

[node name="Camera3D" type="Camera3D" parent="RotationHelper"]
